More edits to paper.tex before final read through

--- a/NHB Submission/latex/appendix.tex
+++ b/NHB Submission/latex/appendix.tex
@@ -1,6 +1,7 @@
-\section{Study 1 Additional Results}
+\section{Study 1 Results}
 \label{sec:appendix_study1}
 
+\subsection{Main Results}
 \input{tables/behavior_regression.tex}
 
 \input{tables/behavior_regression_emotional.tex}
@@ -10,7 +11,7 @@
 \input{tables/attitude_regression.tex}
 
 \clearpage
-\section{Study 1 Additional Results (Appendix)}
+\subsection{Additional Results}
 
 \input{tables/exp1_sample.tex}
 
@@ -30,8 +31,10 @@
 
 \clearpage
 
-\section{Study 2 Additional Results}
+\section{Study 2 Results}
 \label{sec:appendix_study2}
+
+\input{tables/exp2_sample.tex}
 
 \input{tables/behavior_shared_regression.tex}
 
@@ -41,8 +44,10 @@
 
 \input{tables/attitude_shared_regression.tex}
 
+\clearpage
 \input{tables/attitude_unrelated_regression.tex}
 
+\clearpage
 \input{tables/attitude_opposite_regression.tex}
 
 \input{figures_tex/study2_main_fivecent_behavior_all.tex}
