--- a/NHB Submission/latex/bibfiles/stm.bib
+++ b/NHB Submission/latex/bibfiles/stm.bib
@@ -68,7 +68,7 @@
   author = {Charan, Ram and Useem, Jerry and Harrington, Ann},
   year = {2002},
   journal = {Fortune},
-  volume = {May 27th, available at {$<$}a href="https://money.cnn.com/magazines/fortune/fortune\_archive/2002/05/27/323712/index.htm"{$>$}https://money.cnn.com/magazines/fortune/fortune\_archive/2002/05/27/323712/index.htm{$<$}/a{$>$} (last accessed on April 20th, 2024)}
+  volume = {May 27th, available at \url{"https://money.cnn.com/magazines/fortune/fortune_archive/2002/05/27/323712/} (last accessed on May 8th, 2024)}
 }
 
 @article{christensen2009herodotosa,
@@ -183,6 +183,7 @@
   author = {Grimmer, Justin and Westwood, Sean J. and Messing, Solomon},
   year = {2014},
   month = nov,
+  address = {Princeton, NJ},
   publisher = {Princeton University Press},
   doi = {10.1515/9781400852666},
   urldate = {2024-05-06},
@@ -391,6 +392,7 @@
   shorttitle = {Prisoner's {{Dilemma}}},
   author = {Rapoport, Anatol and Chammah, Albert M.},
   year = {1965},
+  address = {Ann Arbor, MI},
   publisher = {University of Michigan Press},
   abstract = {The term "Prisoner's Dilemma" comes from the original anecdote used to illustrate this game of strategy. Two prisoners, held incommunicado, are charged with the same crime. They can be convicted only if either confesses. If both prisoners confess, their payoff is minus one. If neither confesses, it is plus one. If only one confesses, he is set free for having turned state's evidence and is given a reward of plus two to boot. The prisoner who holds out is convicted on the strength of the other's testimony and is given a more severe sentence than if he had confessed. His payoff is minus two. It is in the interest of each to confess no matter what the other does, but it is in their collective interest to hold out.There is no satisfactory solution to the paradox of this game. Its simplicity is misleading. What seems rational from your own point of view, turns out to be detrimental in the end. This book is an account of many experiments in which Prisoner's Dilemma was played. Analyzing the results, one can learn how people are motivated to trust or distrust their partners, to keep faith or to betray, to be guided by joint or selfish interest. The method represents an important step toward building a bridge between psychology which is based on hard data and reproducible experiments and psychology which is concerned with internal conflict.},
   googlebooks = {yPtNnKjXaj4C},
@@ -434,7 +436,7 @@
   author = {Sheldon, Mark},
   year = {1982},
   month = feb,
-  journal = {JAMA},
+  journal = {The Journal of the American Medical Association},
   volume = {247},
   number = {5},
   pages = {651--654},
