--- a/NHB Submission/latex/paper.tex
+++ b/NHB Submission/latex/paper.tex
@@ -69,14 +69,14 @@ messenger'' effect as the ``RTM'' effect.
 
 We provide the first experimental demonstration of messenger bias using
 behavioral outcomes and also confirm and extend prior results found with
-attitudinal measures. We also show how the messenger bias
+attitudinal measures. We also show how messenger bias
 can be reduced. In our experiments, we use real human participant to
 both receive messages and to deliver messages, a point of contrast from
 prior work using confederates or a fictional character in a vignette \citep{kuhlen2013language}. 
 In two large pre-registered experiments (Study 1 and Study 2), we compared
 people's decisions toward a messenger who delivered good rather than bad
-news against decisions toward another partner who was not the messenger.
-\footnote{The pre-registration for Study 1 can be found at \url{https://aspredicted.org/PD3_KC2}, 
+news against decisions toward another partner who was not the messenger.\footnote{The 
+pre-registration for Study 1 can be found at \url{https://aspredicted.org/PD3_KC2}, 
 and the pre-registration for Study 2 can be found at 
 \url{https://aspredicted.org/8TG_4KY}.} 
  In
@@ -96,12 +96,12 @@ Table \ref{tab:summary-results}. First, in both of our
 studies, we confirm the existence of the shoot the messenger (STM)
 effect, while also discovering a reward the messenger (RTM) effect. The
 RTM effect is as large, if not larger, than the STM effect across both
-Study 1 and Study 2. Second, we examine the implications of the
+Study 1 and Study 2. Second, we examine the implications of
 messenger bias by using behavioral measures, in addition to the
 attitudinal measures that previous research has exclusively focused on.
 We find that although in this context attitudinal effects appear to
 correlate with behavioral outcomes, attitudinal measures overestimate
-the messenger bias compared to behavioral measures. Finally, when
+messenger bias compared to behavioral measures. Finally, when
 varying the incentives of the messenger in Study 2, we discover that
 merely specifying the incentives of the messenger eliminates the STM for
 both behaviors and attitudes, while the RTM effect remains remarkably
@@ -114,7 +114,7 @@ bias in everyday life.
 consequence of merely delivering a message. One side of the messenger
 bias, the STM effect, has been assumed in prior work, which investigated
 how belief in punishment for delivering bad news affected behavior.
-Specifically, the antecedent of the messenger bias is the MUM (Mum about
+Specifically, the antecedent of messenger bias is the MUM (Mum about
 Undesirable Messages) effect, which is the notion that people are
 typically more reluctant to convey bad news than good news \citep{rosen1970reluctance,rosen1972fear}. 
 Messengers prefer to avoid conveying bad news
@@ -144,7 +144,7 @@ the same paper also found initial evidence that people like messengers
 who bring good news, although they did not explicitly identify a RTM
 effect.
 
-Several explanations have been offered for the messenger bias. As \citet{john2019shooting}
+Several explanations have been offered for messenger bias. As \citet{john2019shooting}
  found, the respondent may shoot the messenger for bringing
 bad news by assuming them to have malevolent motives or in a desire to
 make sense of the news by blaming the messenger as the most proximate
@@ -155,7 +155,7 @@ to those by in-group members (the intergroup sensitivity effect)
 bring bad news may be penalized if they are assumed to be acting counter
 to the interests of the group. At the same time, this implies that
 clarifying the relationship between the messenger and the recipient of
-the message may be a fruitful strategy to ameliorate the messenger bias.
+the message may be a fruitful strategy to ameliorate messenger bias.
 Specifically, the messenger showing themselves to be unaligned with any
 potential out-groups may reduce the negative effect of criticisms
 \citep{hornsey2007groupdirected}.
@@ -192,7 +192,7 @@ experiments. Since we have both behavior and attitudinal measures in the
 same studies, we can directly compare the performance of these measures.
 
 Second, our experimental design addresses some issues in prior work.
-Such work does not fully identify the composition of the messenger bias
+Such work does not fully identify the composition of messenger bias
 because of their experimental designs, which only compare reactions to
 messengers bringing bad news to messengers bringing good news. Our paper
 adds a ``messenger vs. non-messenger'' condition to all our
@@ -206,7 +206,7 @@ previous studies do not distinguish between these two effects, it
 remains unclear whether there is something distinct about the
 \emph{delivery} of bad news which is specific to the messenger from just
 bad news generally. The second benefit is the ability to estimate the
-opposite side of the messenger bias: rewarding the messenger for
+opposite side of messenger bias: rewarding the messenger for
 delivering good news. Although previous work has not pointed out the
 existence of a RTM effect, perhaps because they assume it to simply be
 symmetric to the STM effect, we compare the magnitude and persistence of
@@ -217,7 +217,7 @@ these quantities of interest differently from past work.
 
 \input{figures_tex/survey_flow.tex}
 
-We conducted two related experiments that investigate the messenger bias
+We conducted two related experiments that investigate messenger bias
 in attitudes and behaviors. Figure \ref{fig:survey-flow} shows the experimental design for
 both Study 1 and Study 2. In both studies, participants performed an
 incentivized task (either the ``counting task,’’ counting odd numbers in a matrix, emulating ``skill,'' or the ``prediction task,’’ predicting a coin toss, emulating luck) with a
@@ -251,7 +251,7 @@ of the RTM and STM effects. The STM effect is shown on the left-hand side of eac
 Similarly, the RTM effect is on the right-hand side of each panel and is estimated for those who won the first task.
 We also compare the relative magnitude of these two estimates by testing
 whether $RTM = -STM$ (not shown, only described in the footnote of
-the figure). Finally, we claim that a messenger bias exists if we fail to
+the figure). Finally, we claim that messenger bias exists if we fail to
 reject the joint hypothesis test that $STM = 0$ and $RTM = 0$ (not
 shown, only described in the footnote of the figure). The Methods section
 provides additional details on how we define these quantities of
@@ -272,7 +272,7 @@ part 1 (messenger treatment) or a new partner unrelated to the messenger
 
 \input{figures_tex/study1_behavior_list.tex}
 
-Across all three behavioral measures, we see consistent evidence of a
+Across all three behavioral measures, we see consistent evidence of
 messenger bias, which means participants treat messengers differently
 compared to non-messengers holding constant whether the respondent wins or
 loses. However, whether this bias is a result of shooting or rewarding
@@ -314,37 +314,47 @@ calculated as the average of the standardized behavioral measures
 ranging from 0 to 1) we see an overall
 STM effect of .15 and an RTM effect of .25 (both coefficients are
 significant at the $p < .001$) level, which implies that
-a messenger bias exists from both shooting and rewarding the messenger
+messenger bias exists from both shooting and rewarding the messenger
 ($p < .001$). Although the RTM point estimate has a larger
 magnitude than the STM effect, this difference is not significant ($p
 = .12$). These results do not change when we include
-demographic controls (Table \ref{tab:behavior_regression_demographic}).
-\footnote{Along with demographic covariates such as age, gender, ideology,
+demographic controls (Table \ref{tab:behavior_regression_demographic}).\footnote{Along with demographic covariates such as age, gender, ideology,
 education, employment, and race, we also include three psychological scales that may be
-related to the messenger bias or our outcome measures. These are the just world
+related to messenger bias or our outcome measures. These are the just world
 scale \citep{lipkus1991construction}, the emotion regulation scale \citep{buss1992aggression}, and the
 belief in luck scale \citep{darke1997belief}.}
 \input{figures_tex/study1_attitude_list.tex}
 
-Next, we analyze the four attitudinal measures (trustworthiness,
-niceness, likability, and generosity). Figure \ref{fig:attitude_list} presents the results
-graphically, following the same logic as Figure \ref{fig:behavior_list}. Each of these
-attitudes was measured on a 7-point scale. Unlike the behavioral
-measures, we see consistent messenger bias, both RTM and STM effects,
-across all attitudinal measures. For simplicity, therefore, we focus on
-the index measure (called the ``attitudes index,'') which averages the
- ratings of the four attitudes from 0 to 1. We
-see that respondents consistently rewarded the messenger, as they are
-around 4\% ($p < .01$) more favorable (for the
-index measure) after winning, compared to attitudes towards the
-non-messenger. Similarly, respondents consistently shot the messenger,
-as they are 4\% ($p < .01$) less favorable to
-messengers after losing. These effects are of equal size and
-statistically indistinguishable.\footnote{We also consider more complex regression models where we include as predictors the type of task (the skill counting task or the luck prediction task) and its interactions with losing and the messenger (see Appendix \ref{sec:appendix_study1}, Table \ref{tab:behavior_regression_counting} and \ref{tab:attitude_regression_counting}). These analyses reveal that there are almost no differences in the STM and RTM effects by the type of task, with the exception of the RTM effect for behaviors being smaller for the counting (skill) task compared to the prediction (luck) task in Table \ref{tab:behavior_regression_counting}. Finally, we note that whether the message was emotional or neutral also made no difference in the behavioral outcome measures (see Appendix \ref{sec:appendix_study1}, Table \ref{tab:behavior_regression_emotional} and \ref{tab:attitude_regression_emotional}), so we also ignore that difference in our analyses here.}
+Next, we analyze the four attitudinal measures (trustworthiness, niceness,
+likability, and generosity). Figure \ref{fig:attitude_list} presents the results
+graphically, following the same logic as Figure \ref{fig:behavior_list}. Each of
+these attitudes was measured on a 7-point scale. Unlike the behavioral measures,
+we see consistent messenger bias, both RTM and STM effects, across all
+attitudinal measures. For simplicity, therefore, we focus on the index measure
+(called the ``attitudes index,'') which averages the ratings of the four
+attitudes from 0 to 1. We see that respondents consistently rewarded the
+messenger, as they are around 4\% ($p < .01$) more favorable (for the index
+measure) after winning, compared to attitudes towards the non-messenger.
+Similarly, respondents consistently shot the messenger, as they are 4\% ($p < .
+01$) less favorable to messengers after losing. These effects are of equal size
+and statistically indistinguishable.\footnote{We note that whether the message
+was emotional or neutral also made no difference in the behavioral outcome
+measures in Table \ref{tab:behavior_regression_emotional} 
+(see Table \ref{tab:behavior_regression_emotional_demographic} for the model with demographic
+covariates), so we also ignore that difference in our analyses here. Finally, we
+also consider more complex regression models where we include as predictors the
+type of task (the skill counting task or the luck prediction task) and its
+interactions with losing and the messenger in Table \ref{tab:behavior_regression_counting} 
+(see Table \ref{tab:behavior_regression_counting_demographic} 
+for the model with demographic
+covariates). These analyses reveal that there are almost no differences in the
+STM and RTM effects by the type of task, with the exception of the RTM effect
+for the perisoner's dilemma task being smaller for the counting (skill) task compared to the
+prediction (luck) task in Table \ref{tab:behavior_regression_counting}.}
 
 To summarize, we find that respondents displayed a biased response to
 the messenger in both their behaviors and attitudes, showing evidence of
-a messenger bias, even though the respondents were told that the
+messenger bias, even though the respondents were told that the
 messenger was merely mechanically reporting the participant's result for
 the task. After winning, we find consistent indications of greater
 altruism, trust, and (to a lesser extent) cooperation toward the
@@ -364,7 +374,7 @@ the presence of STM and RTM effects, with the RTM effect being equal to
 or larger than the STM effect. This shows that in studying the messenger
 bias, we cannot assume that the RTM effect is symmetric to the STM
 effect. Second, the behavioral measures show more inconsistent
-measurements of the messenger bias compared to attitudinal measures, as
+measurements of messenger bias compared to attitudinal measures, as
 we fail to find a STM effect for the spin the wheel task (a measure of the hot hand fallacy, or an intuition that the messenger can be trusted to bring good news again) and a
 RTM effect for the prisoner's dilemma (a measure of cooperation). This suggests the
 importance of behavioral analysis in the study of conflict and
@@ -374,7 +384,7 @@ messengers \citep{del2020behavioral, ostrom1998behavioral}.
 
 \subsection{Study 2}
 
-Study 1 documented a messenger bias in both attitudes and behaviors,
+Study 1 documented messenger bias in both attitudes and behaviors,
 which occurred both when the messenger brought good news and when they
 announced bad news. However, Study 1 left unstated whether the messenger
 had any stake in the outcome of the task, despite that fact that they
@@ -386,26 +396,29 @@ stake in delivering the good or the bad news. Specifying the messenger's
 stake in the news also allows us to manipulate whether the messenger's
 motives are neutral (unrelated fate), aligned with (shared fate), or
 opposite (opposite fate) to the ones of the participant. Manipulating
-the messenger's incentives may provide insights into whether the
+the messenger's incentives may provide insights into whether
 messenger bias can be reduced or strengthened depending on the alignment
 of the messenger's stakes, which allows us to understand if
 institutional designs can counteract the behavioral tendency to treat
 messengers differently depending on the news they deliver.
 
-Similar to Study 1, we analyzed the results of losing and winning in the first task on behaviors and attitudes towards messengers and non-messengers by the three treatment conditions: shared, unrelated, and opposite Fate. For simplicity, we present only the behavioral and attitudes
-indices in Figures \ref{fig:study2_main_behavior_all} and \ref{fig:study2_main_attitude_all} (the associated regression
-tables are in Appendix \ref{sec:appendix_study2}). Unlike in the presentation of the Experiment
-1 results, the first three columns or facets of each figure are for the
-three conditions in Study 2 (shared fate, unrelated fate, and opposite
-fate). The last column repeats the index dependent variable from
-Study 1 for reference, in which respondents were not explicitly told about any
+Similar to Study 1, we analyzed the results of losing and winning in the first
+task on behaviors and attitudes towards messengers and non-messengers by the
+three treatment conditions: shared, unrelated, and opposite fate. For simplicity,
+we present only the behavioral and attitudes indices in Figures \ref{fig:study2_main_behavior_all} 
+and \ref{fig:study2_main_attitude_all} (the associated
+regression tables are in Appendix \ref{sec:appendix_study2}). Unlike in the
+presentation of the Experiment 1 results, the first three columns or facets of
+each figure are for the three conditions in Study 2 (shared, unrelated, and
+opposite fate). The last column repeats the index dependent variable from Study
+1 for reference, in which respondents were not explicitly told about any
 incentives for the messenger.
 
 \input{figures_tex/study2_main_behavior_all.tex}
 
 First, we analyze the effect of winning (reward the messenger) and
 losing (shoot the messenger) on the behavioral index in Figure \ref{fig:study2_main_behavior_all}, which allows us to
-test whether these conditions eliminate the messenger bias. Across all
+test whether these conditions eliminate messenger bias. Across all
 three conditions (and similarly to Study 1), we find that the
 reward the messenger (RTM) effect remains, although it is not
 significant in the unrelated fate condition ($p = .06$). However, we
@@ -421,7 +434,7 @@ causes respondents to behave in a prosocial manner towards the
 messenger, regardless of whether they win or lose. Thus, when comparing
 the relative magnitude of the RTM and STM effects, we find that the RTM
 effect is significantly larger than the STM effect in the shared and unrelated fate conditions.
-Overall, we find evidence that the messenger bias disappears completely
+Overall, we find evidence that messenger bias disappears completely
 only in the unrelated fate condition, which shows that specifying that
 the messenger's outcomes are not related to the respondent's is
 effective in getting rid of either positive or negative bias towards the
@@ -437,15 +450,17 @@ significant in any condition, although it also monotonically decreases
 from the opposite to the shared fate conditions. The point estimate is
 positive only in the shared fate condition. As with the behavioral
 index, the RTM effects are again significantly larger than the STM
-effects in the shared and unrelated fate conditions. However, no condition eliminated the
+effects in the shared and unrelated fate conditions. However, no condition eliminated
 messenger bias for the attitudinal measures, which implies that
-respondents were much more likely to view messengers positively when
-they delivered good rather than bad news.
+respondents were much more likely to view messengers differently when
+they delivered good rather than bad news.\footnote{Again, we do not find any difference
+between the prediction and counting tasks for the behavioral and attitudes index measure
+across all fate conditions.}
 
 Overall, in Study 2, we find three important results. First, we continue
 to find that the STM and RTM effects for behaviors are different than
 those for attitudes, even when we specify the fate of the messenger.
-Although it may be possible to eliminate the messenger bias for
+Although it may be possible to eliminate messenger bias for
 behaviors, we find no such result for attitudinal measures. Second,
 whether the incentives of messenger and respondent are aligned or
 misaligned is crucial for determining whether messenger bias arises.
@@ -453,7 +468,7 @@ Across all conditions and measures, specifying the stakes of the
 messenger in the outcome reversed the sign of or attenuated the STM
 effect. In contrast, the RTM effect was present across most conditions
 for both behaviors and attitudes. The only exception was the unrelated
-fate condition, which was the only treatment to eliminate the messenger
+fate condition, which was the only treatment to eliminate messenger
 bias completely
 for behavioral measures, as we find no STM or RTM effects. Surprisingly,
 the shared fate condition induced respondents to reward the messenger regardless of whether
@@ -473,7 +488,7 @@ opposite incentives of the respondent. This finding points to a fruitful avenue 
 \section{Discussion}
 
 Across two incentivized experiments with thousands of participants, we
-find consistent evidence of the messenger bias and how to mitigate it.
+find consistent evidence of messenger bias and how to mitigate it.
 In Study 1, participants both shot and rewarded the messenger for
 delivering bad news and good news, respectively. In Study 2, the
 STM effect was either eliminated entirely or substantially diminished
@@ -503,7 +518,7 @@ strategies or institutions that restore incentives for messengers to
 tell the truth. However, we also find that the RTM effect is greater
 than or equal to the STM effect and surprisingly resilient in Study 2
 compared to the STM effect. The RTM effect is just as normatively concerning
-and deserving attention because it suggests people may rush to convey
+and deserving of attention because it suggests people may rush to convey
 good news regardless of whether they contributed to the good outcome. At
 one extreme, people's intuitions to reward pure messengers may skew the
 incentives in the communication environment from producing good news to
@@ -512,7 +527,7 @@ of good outcomes for society at a relative disadvantage compared to the
 people who communicate those outcomes to the public, such as influencers
 on social media or spokespersons.
 
-Second, the present experiments provide the first evidence of a
+Second, the present experiments provide the first evidence of
 messenger bias that affects prosocial behavior and goes beyond
 attitudes. When no information about the messenger's payoffs was
 provided in Study 1, respondents' attitudes toward the messenger
@@ -523,13 +538,13 @@ trusting after losing (shooting the messenger for spin the wheel) or
 more cooperative after winning (rewarding the messenger for prisoner's
 dilemma). Study 2 confirms this discrepancy between behavioral and
 attitudinal measures, as the unrelated fate condition was able to
-eliminate the messenger bias completely for behavioral measures, but the
+eliminate messenger bias completely for behavioral measures, but
 messenger bias persisted for attitudinal measures across all conditions.
 Therefore, only focusing on attitudinal measures like prior work would
-overestimate the impact of the messenger bias, as biased attitudes may
+overestimate the impact of messenger bias, as biased attitudes may
 not translate into biased behaviors towards the messenger. This study
 demonstrates the importance of using behavioral measures to better
-understand the implications of the messenger bias and how to reduce it.
+understand the implications of messenger bias and how to reduce it.
 
 Finally, we show one effective strategy that broadly eliminates STM
 effects for biased behaviors: specifying the incentives of the messenger
@@ -545,6 +560,6 @@ explore other effective strategies beyond clarifying the relationship
 between the messenger and the message. These could involve avoiding using
 controlling or abstract messages \citep[see, e.g.,][]{sparks2008style,miller2007psychological} or increasing messenger credibility \citep[see, e.g.,][]{hunt1984role,kamins1987twosided}. 
 Future work can then
-continue to unravel the messenger bias and its impact on interpersonal
+continue to unravel messenger bias and its impact on interpersonal
 relations, markets, and politics, along with how to mitigate these
 impacts.
