--- a/NHB Submission/latex/tables/behavior_logit_regression_emotional.tex
+++ b/NHB Submission/latex/tables/behavior_logit_regression_emotional.tex
@@ -1,7 +1,7 @@
 \renewcommand{\baselinestretch}{1.25}%
 
 \begin{table}[!t]
-\caption{Generalized linear regressions of the behavioral measures on losing in task 1, being paired with the messenger, emotionality of message, and their interaction}
+\caption{Generalized linear regressions of behavioral measures on losing in task 1, being paired with the messenger, emotionality of message, and their interaction}
 \begin{center}
 \scalebox{0.9}{
 \begin{threeparttable}
