--- a/NHB Submission/latex/tables/behavior_unrelated_regression.tex
+++ b/NHB Submission/latex/tables/behavior_unrelated_regression.tex
@@ -1,7 +1,7 @@
 \renewcommand{\baselinestretch}{1.25}%
 
 \begin{table}[!t]
-\caption{Regressions of the behavioral measures on losing in task 1, being paired with the messenger, and their interaction in the Unrelated Fate condition (including demographic controls).}
+\caption{Regressions of behavioral measures on losing in task 1, being paired with the messenger, and their interaction in the unrelated fate condition (including demographic controls)}
 \begin{center}
 \scalebox{0.9}{
 \begin{threeparttable}
