--- a/NHB Submission/latex/tables/exp1_sample.tex
+++ b/NHB Submission/latex/tables/exp1_sample.tex
@@ -3,7 +3,7 @@
 \centering
 
 \begin{threeparttable}
-\caption{Sample demographics, Experiment 1}
+\caption{Sample demographics, Study 1}
 
 \begin{tabular}[t]{lcccc}
 \toprule
