--- a/NHB Submission/latex/tables/attitude_opposite_regression.tex
+++ b/NHB Submission/latex/tables/attitude_opposite_regression.tex
@@ -1,7 +1,7 @@
 \renewcommand{\baselinestretch}{1.25}%
 
 \begin{table}[!t]
-\caption{Regressions of the attitude measures on losing in task 1, being paired with the messenger, and their interaction in the Opposite Fate condition (including demographic controls).}
+\caption{Regressions of attitude measures on losing in task 1, being paired with the messenger, and their interaction in the opposite fate condition (including demographic controls)}
 \begin{center}
 \scalebox{0.8}{
 \begin{threeparttable}
