--- a/NHB Submission/latex/tables/behavior_regression.tex
+++ b/NHB Submission/latex/tables/behavior_regression.tex
@@ -1,6 +1,6 @@
 \renewcommand{\baselinestretch}{1.25}%
 
-\begin{table}[!ht]
+\begin{table}[!t]
 \caption{Regressions of behavioral measures on losing in task 1, being paired with the messenger, and their interaction}
 \begin{center}
 \scalebox{1}{
